# tap-criteo

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  sample_config.json  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
tap_criteo/: __init__.py  criteo.py  discover.py  endpoints.py  sync.py
tap_criteo/metadata/: AdvertiserInfo.json  Audiences.json  Budgets.json  CampaignBids.json  CampaignStats.json  Campaigns.json  Categories.json  Portfolio.json  SellerBudgets.json  SellerCampaignStats.json  SellerCampaigns.json  SellerStats.json  Sellers.json  Statistics.json
tap_criteo/schemas/: AdvertiserInfo.json  Audiences.json  Budgets.json  CampaignBids.json  CampaignStats.json  Campaigns.json  Categories.json  Portfolio.json  SellerBudgets.json  SellerCampaignStats.json  SellerCampaigns.json  SellerStats.json  Sellers.json  Statistics.json
