[metadata]
name = tap-criteo
version = 0.1.0
description = Singer.io tap for extracting data from Criteo Marketing API
long-description = file: README.md
long_description_content_type = text/markdown
author = Judah Rand
author-email = judah.rand@fospha.com
url = http://singer.io
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
package_data =
    schemas = tap_criteo/schemas/*.json
    metadata = tap_criteo/metadata/*.json
python_requires = >= 3.6
py_modules = tap_criteo
install_requires =
    singer-python == 5.9.0
    criteo_marketing == 1.0.159

[options.extras_require]
dev =
    tox

[options.entry_points]
console_scripts =
    tap-criteo = tap_criteo:main

; mypy config
[mypy-singer]
ignore_missing_imports = True

[mypy-criteo_marketing]
ignore_missing_imports = True

[mypy-criteo_marketing.rest]
ignore_missing_imports = True

